--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,10 @@ h6 {
 /*-----------Fonts--------*/
 /*-----------Wrapper--------*/
 body {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
@@ -214,17 +218,13 @@ body {
           align-items: center;
 }
 
-@media (max-width: 600px) {
-  .header__menu {
-    display: none;
-  }
-}
-
 .header__button {
   width: 128px;
   height: 40px;
   border-radius: 20px;
   font-weight: 700;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
 
 .header__button a {
@@ -247,19 +247,8 @@ body {
   }
 }
 
-.header__burger {
-  display: none;
-}
-
-@media (max-width: 600px) {
-  .header__burger {
-    display: block;
-    padding: 0px 15px 0px 0px;
-  }
-}
-
-.header__burger-menu {
-  background-color: #000;
+.header__button:hover {
+  background-color: #4FE9A4;
 }
 
 .logo__image {
@@ -277,6 +266,14 @@ body {
 
 .menu-list__link {
   margin: 0px 40px 0px 0px;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+@media (max-width: 600px) {
+  .menu-list__link {
+    margin: 0px 10px 0px 0px;
+  }
 }
 
 .menu-list__link a {
@@ -284,6 +281,10 @@ body {
   font-size: 16px;
   line-height: 178%;
   color: #FFFFFF;
+}
+
+.menu-list__link:hover {
+  text-decoration: underline;
 }
 
 /*-----------Pages--------*/
@@ -555,7 +556,6 @@ body {
 }
 
 .text-item__buy {
-  background-color: #65E4A3;
   width: 247px;
   height: 60px;
   margin: 0px 24px 0px 0px;
@@ -572,7 +572,16 @@ body {
   font-weight: 700;
   font-size: 20px;
   line-height: 140%;
+  border: 2px solid #FFFFFF;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  color: #FFFFFF;
+}
+
+.text-item__buy:hover {
+  background-color: #4FE9A4;
   color: #0A2640;
+  border: 2px solid #4FE9A4;
 }
 
 @media (max-width: 980px) {
@@ -606,6 +615,14 @@ body {
   font-size: 20px;
   line-height: 140%;
   color: #FFFFFF;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+.text-item__explore:hover {
+  background-color: #4FE9A4;
+  color: #0A2640;
+  border: 2px solid #4FE9A4;
 }
 
 @media (max-width: 980px) {
@@ -781,6 +798,13 @@ body {
       align-self: center;
   margin: 0px 0px 24px 0px;
   width: 100%;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+.column-item__image:hover {
+  -webkit-transform: translate(0, -5px);
+          transform: translate(0, -5px);
 }
 
 .column-item__image img {
@@ -1082,6 +1106,8 @@ body {
   line-height: 160%;
   color: #000000;
   padding: 0px 0px 0px 63px;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
 
 .label-connect__item:not(:last-child) {
@@ -1100,6 +1126,11 @@ body {
   background-color: #0A2640;
 }
 
+.label-connect__item:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
 .label-connect__button {
   max-width: 210px;
   height: 60px;
@@ -1114,13 +1145,18 @@ body {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 30px;
-}
-
-.label-connect__button a {
   font-weight: 700;
   font-size: 20px;
   line-height: 140%;
-  color: #FFFFFF;
+  color: #fff;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+.label-connect__button:hover {
+  background-color: #4FE9A4;
+  border: 2px solid #0A2640;
+  color: #0A2640;
 }
 
 .info-connect__title {
@@ -1163,15 +1199,12 @@ body {
           box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.08);
   border-radius: 4px;
   padding: 0px 0px 0px 60px;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
 
 .info-connect__item:not(:last-child) {
   margin: 0px 0px 24px 0px;
-}
-
-.info-connect__item:nth-child(1) {
-  background-color: #0A2640;
-  color: #fff;
 }
 
 .info-connect__item:nth-child(1):before {
@@ -1182,7 +1215,7 @@ body {
   width: 28px;
   height: 28px;
   border-radius: 18px;
-  background: url("../img/Connect/star.svg") 0px 0px no-repeat;
+  background: url("../img/Connect/star-dark.svg") 0px 0px no-repeat;
 }
 
 .info-connect__item:nth-child(2):before {
@@ -1193,7 +1226,7 @@ body {
   width: 28px;
   height: 28px;
   border-radius: 18px;
-  background: url("../img/Connect/eay.svg") 0px 0px no-repeat;
+  background: url("../img/Connect/eay-dark.svg") 0px 0px no-repeat;
 }
 
 .info-connect__item:nth-child(3):before {
@@ -1204,7 +1237,24 @@ body {
   width: 28px;
   height: 28px;
   border-radius: 18px;
-  background: url("../img/Connect/sun.svg") 0px 0px no-repeat;
+  background: url("../img/Connect/sun-dark.svg") 0px 0px no-repeat;
+}
+
+.info-connect__item:hover {
+  background-color: #0A2640;
+  color: #fff;
+}
+
+.info-connect__item:hover:nth-child(1):before {
+  background: url("../img/Connect/star-white.svg") 0px 0px no-repeat;
+}
+
+.info-connect__item:hover:nth-child(2):before {
+  background: url("../img/Connect/eay-white.svg") 0px 0px no-repeat;
+}
+
+.info-connect__item:hover:nth-child(3):before {
+  background: url("../img/Connect/sun-white.svg") 0px 0px no-repeat;
 }
 
 /*-----------Template-------*/
@@ -1311,6 +1361,16 @@ body {
   height: 72px;
   background-color: #fff;
   border-radius: 36px;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  cursor: pointer;
+}
+
+.template__arrow:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-box-shadow: 0px 0px 10px #FFFFFF;
+          box-shadow: 0px 0px 10px #FFFFFF;
 }
 
 .template__columns-cont {
@@ -1373,12 +1433,19 @@ body {
   -webkit-box-shadow: 0px 12px 32px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 12px 32px rgba(0, 0, 0, 0.12);
   border-radius: 12px;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
 
 @media (max-width: 980px) {
   .cards__body {
     padding: 30px;
   }
+}
+
+.cards__body:hover {
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
 }
 
 .cards__text {
@@ -1725,9 +1792,9 @@ body {
 }
 
 .ourblog__button {
+  display: block;
   width: 219px;
   height: 60px;
-  border: 2px solid #0A2640;
   border-radius: 56px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1738,13 +1805,19 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.ourblog__button a {
   font-weight: 700;
   font-size: 20px;
   line-height: 140%;
+  color: #FFFFFF;
+  background-color: #0A2640;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+.ourblog__button:hover {
+  border: 2px solid #0A2640;
   color: #0A2640;
+  background-color: #4FE9A4;
 }
 
 .card__lable {
@@ -1937,7 +2010,7 @@ body {
 .email__button {
   width: 210px;
   height: 60px;
-  background-color: #65E4A3;
+  background-color: #0A2640;
   border-radius: 56px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1948,13 +2021,19 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.email__button a {
   font-weight: 700;
   font-size: 20px;
   line-height: 140%;
+  color: #fff;
+  border: 2px solid #fff;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+.email__button:hover {
+  border: 2px solid #0A2640;
   color: #0A2640;
+  background-color: #4FE9A4;
 }
 
 /*-----------Footer--------*/
@@ -2226,12 +2305,6 @@ body {
           align-items: center;
 }
 
-@media (max-width: 600px) {
-  .header-dark__menu {
-    display: none;
-  }
-}
-
 .header-dark__button {
   width: 128px;
   height: 40px;
@@ -2239,9 +2312,16 @@ body {
   font-weight: 700;
   background-color: #fff;
   border: 2px solid #0A2640;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+.header-dark__button:hover {
+  background-color: #4FE9A4;
 }
 
 .header-dark__button a {
+  color: #0A2640;
   font-size: 16px;
   line-height: 150%;
 }
@@ -2260,17 +2340,6 @@ body {
   }
 }
 
-.header-dark__burger {
-  display: none;
-}
-
-@media (max-width: 600px) {
-  .header-dark__burger {
-    display: block;
-    padding: 0px 15px 0px 0px;
-  }
-}
-
 .logo-dark__image {
   margin: 0px 11.3px 0px 0px;
 }
@@ -2286,6 +2355,18 @@ body {
 
 .menu-list-dark__link {
   margin: 0px 40px 0px 0px;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+
+@media (max-width: 600px) {
+  .menu-list-dark__link {
+    margin: 0px 10px 0px 0px;
+  }
+}
+
+.menu-list-dark__link:hover {
+  text-decoration: underline;
 }
 
 .menu-list-dark__link a {
